--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
     <script>
         // Получаем URL вебхука из переменной окружения
         // На Render.com эта переменная будет подставлена автоматически
-        const WEBHOOK_URL = window.WEBHOOK_URL || 'https://n8n-jjlb.onrender.com/webhook-test/9fc4f840-7604-44d0-8e7a-314bc8314f71';
+        const WEBHOOK_URL = window.WEBHOOK_URL;
 
         // Форматирование телефона
         const phoneInput = document.getElementById('phone');
